--- a/legacy-software/src/main/resources/application.properties
+++ b/legacy-software/src/main/resources/application.properties
@@ -1,11 +1,39 @@
-# Application name
+# ===============================
+# ========== DATABASE ===========
+# ===============================
+
+spring.datasource.url=jdbc:mysql://localhost:7878/hospital_db?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ===============================
+# ========== JPA/HIBERNATE ======
+# ===============================
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# ===============================
+# ========== TRANSACTIONS =======
+# ===============================
+
+spring.transaction.default-timeout=30
+spring.transaction.rollback-on-commit-failure=true
+
+# ===============================
+# ========== SERVER CONFIG ======
+# ===============================
+
 spring.application.name=legacy-hospital-system
-
-# Server Configuration
 server.port=8045
-server.context-path=/hospital
+server.servlet.context-path=/hospital
 
-# Logging Configuration
+# ===============================
+# ========== LOGGING ============
+# ===============================
+
 logging.level.org.springframework=INFO
 logging.level.sae.semestre.six=DEBUG
-logging.file=logs/hospital-system.log
+logging.file.name=logs/hospital-system.log
