--- a/legacy-software/pom.xml
+++ b/legacy-software/pom.xml
@@ -50,10 +50,15 @@
 			<artifactId>jakarta.mail</artifactId>
 			<version>2.0.1</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
-		</dependency>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-mail</artifactId>
+                </dependency>
+                <dependency>
+                        <groupId>com.github.librepdf</groupId>
+                        <artifactId>openpdf</artifactId>
+                        <version>1.3.30</version>
+                </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
