--- a/legacy-software/src/main/resources/application.properties
+++ b/legacy-software/src/main/resources/application.properties
@@ -17,3 +17,25 @@ server.servlet.context-path=/hospital
 logging.level.org.springframework=INFO
 logging.level.sae.semestre.six=DEBUG
 logging.file.name=logs/hospital-system.log
+
+# Email configuration
+hospital.mail.host=smtp.gmail.com
+hospital.mail.port=587
+hospital.mail.username=hospital.system@gmail.com
+hospital.mail.password=hospital123!
+hospital.mail.from=hospital.system@gmail.com
+
+# Billing configuration
+hospital.email.admin=admin@hospital.com
+hospital.billing.text.path=C:\\hospital\\billing.txt
+hospital.billing.pdf.dir=C:\\hospital\\bills\\
+
+# Inventory configuration
+hospital.orders.path=C:\\hospital\\orders.txt
+hospital.supplier.email=supplier@example.com
+
+# Prescription configuration
+hospital.prescription.audit=C:\\hospital\\prescriptions.log
+
+# Treatment default prices as name:price comma separated
+hospital.treatment.defaults=CONSULTATION:50,XRAY:100,BLOOD_TEST:30
