--- a/legacy-software/pom.xml
+++ b/legacy-software/pom.xml
@@ -75,12 +75,18 @@
 			<version>5.9.3</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+                <dependency>
+                        <groupId>junit</groupId>
+                        <artifactId>junit</artifactId>
+                        <scope>test</scope>
+                </dependency>
+                <dependency>
+                        <groupId>org.mockito</groupId>
+                        <artifactId>mockito-core</artifactId>
+                        <version>5.7.0</version>
+                        <scope>test</scope>
+                </dependency>
+        </dependencies>
 	<build>
 		<plugins>
 			<plugin>
