--- a/legacy-software/src/main/resources/application.properties
+++ b/legacy-software/src/main/resources/application.properties
@@ -39,3 +39,5 @@ hospital.prescription.audit=C:\\hospital\\prescriptions.log
 
 # Treatment default prices as name:price comma separated
 hospital.treatment.defaults=CONSULTATION:50,XRAY:100,BLOOD_TEST:30
+
+spring.sql.init.mode=always
