--- a/legacy-software/src/main/resources/application.properties
+++ b/legacy-software/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.transaction.rollback-on-commit-failure=true
 spring.application.name=legacy-hospital-system
 server.port=8045
 server.servlet.context-path=/hospital
+spring.jpa.defer-datasource-initialization=true
 
 logging.level.org.springframework=INFO
 logging.level.sae.semestre.six=DEBUG
